--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build_client": "cd frontend && yarn build && cd ..",
     "build_server": "cd backend && yarn build && cd ..",
     "build": "yarn build_client && yarn build_server",
-    "dev": "concurrently \"cd backend && yarn start:dev\" \"cd frontend && yarn dev --host\"",
+    "dev": "concurrently \"cd backend && yarn start:dev\" \"cd frontend && yarn dev --host\" \"cd backend && npx prisma studio\"",
     "start": "cd backend && yarn start:prod",
-    "postinstall": "cd frontend && yarn && cd ../backend && yarn"
+    "postinstall": "cd frontend && yarn && cd ../backend && yarn && npx prisma migrate dev"
   }
 }
