--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
+    "react-contextmenu": "^2.14.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
