removed postinstall script

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "build": "yarn build_client && yarn build_server",
     "postbuild": "mkdir -p backend/dist/client && cp -r frontend/dist/* backend/dist/client && cd backend && npx prisma migrate deploy && npx prisma db seed",
     "dev": "concurrently \"cd backend && yarn start:dev\" \"cd frontend && yarn dev --host\" \"cd backend && npx prisma studio\"",
-    "start": "cd backend && yarn start:prod",
-    "postinstall": "cd frontend && yarn && cd ../backend && yarn && npx prisma migrate dev"
+    "start": "cd backend && yarn start:prod"
   }
 }
