--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build_client": "cd frontend && yarn build && cd ..",
     "build_server": "cd backend && yarn build && cd ..",
     "build": "yarn build_client && yarn build_server",
-    "postbuild": "mkdir -p backend/dist/client && cp -r frontend/dist/* backend/dist/client && cd backend && npx prisma migrate deploy && npx prisma db seed",
+    "postbuild": "mkdir -p backend/client && cp -r frontend/dist/* backend/client && cd backend && npx prisma migrate deploy && npx prisma db seed",
     "dev": "concurrently \"cd backend && yarn start:dev\" \"cd frontend && yarn dev --host\" \"cd backend && npx prisma studio\"",
     "start": "cd backend && yarn start:prod",
     "postinstall": "cd frontend && yarn && cd ../backend && yarn"
