--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,4 @@
 PORT=3000
+ACCESS_SECRET=access_token_secret
+REFRESH_SECRET=refresh_token_secret
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
