--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,7 @@ PORT=3000
 ACCESS_SECRET=access_token_secret
 REFRESH_SECRET=refresh_token_secret
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+MAILER_HOST="smtp.mail.com"
+MAILER_USER="user@mail.com"
+MAILER_PASSWORD="generated within google app password"
