--- a/backend/package.json
+++ b/backend/package.json
@@ -29,15 +29,19 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.14",
     "@prisma/client": "^5.5.2",
+    "@types/multer": "^1.4.11",
     "argon2": "^0.31.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "convert-excel-to-json": "^1.7.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "read-excel-file": "^5.7.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.2.1",
