--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.1.0",
-    "react-spinners": "^0.13.8"
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
