--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
     "react-spinners": "^0.13.8",
-    "styled-components": "^6.1.0",
-    "swiper": "^11.0.5"
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
