--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,8 +30,8 @@ jobs:
       - name: commit changes
         uses: EndBug/add-and-commit@v9
         with:
-          author_name: github-actions[bot]
-          author_email: github-actions[bot]@users.noreply.github.com
+          author_name: ${{ USER_NAME }}
+          author_email: ${{ USER_EMAIL }}
           message: Build ✨
       - name: checkout to build branch
         run: |
