--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,8 +30,8 @@ jobs:
       - name: commit changes
         uses: EndBug/add-and-commit@v9
         with:
-          author_name: ${{ USER_NAME }}
-          author_email: ${{ USER_EMAIL }}
+          author_name: ${{ secrets.USER_NAME }}
+          author_email: ${{ secrets.USER_EMAIL }}
           message: Build ✨
       - name: checkout to build branch
         run: |
