--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,6 +27,7 @@ jobs:
           mv backend/* .
           rm -rf backend/
           rm .gitignore
+          git config --system --add safe.diretory '*'
       - name: commit changes
         uses: EndBug/add-and-commit@v9
         with:
