--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,13 +27,12 @@ jobs:
           mv backend/* .
           rm -rf backend/
           rm .gitignore
-          git config --system --add safe.diretory '*'
       - name: commit changes
-        uses: EndBug/add-and-commit@v9
-        with:
-          author_name: ${{ secrets.USER_NAME }}
-          author_email: ${{ secrets.USER_EMAIL }}
-          message: Build ✨
+        run: |
+          git config --global --add safe.directory .
+          git config --global user.name ${{ secrets.USER_NAME }}
+          git config --global user.email ${{ secrets.USER_EMAIL }}
+          git commit -am "Build ✨"
       - name: checkout to build branch
         run: |
           git push origin --delete build
