--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,7 +29,7 @@ jobs:
           rm .gitignore
       - name: commit changes
         run: |
-          git config --global --add safe.directory .
+          git config --global --add safe.directory $(pwd)
           git config --global user.name ${{ secrets.USER_NAME }}
           git config --global user.email ${{ secrets.USER_EMAIL }}
           git commit -am "Build ✨"
