--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,11 +35,11 @@ jobs:
           git commit -am "Build ✨"
       - name: checkout to build branch
         run: |
-          git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ secrets.USER_NAME }}/${{ github.event.repository.name }}.git
+          git remote set-url origin https://${{ secrets.PAT }}@github.com/${{ secrets.USER_NAME }}/${{ github.event.repository.name }}.git
           git push origin --delete build
           git checkout -b build
       - name: push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.PAT }}
           branch: build
