--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,8 @@ jobs:
           git config --global --add safe.directory $(pwd)
           git config --local user.name ${{ secrets.USER_NAME }}
           git config --local user.email ${{ secrets.USER_EMAIL }}
-          git commit -am "Build ✨"
+          git add .
+          git commit -m "Build ✨"
       - name: checkout to build branch
         run: |
           git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ secrets.USER_NAME }}/${{ github.event.repository.name }}.git
