--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,7 @@ jobs:
         run: |
           mv backend/* .
           rm -rf backend/
-          rm -r test/ .gitignore 
+          rm -r test/ .gitignore README.md
       - name: commit changes
         run: |
           git config --global --add safe.directory $(pwd)
