--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - preview
-  pull_request: 
-    branches: 
+  pull_request:
+    branches:
       - preview
 
 jobs:
@@ -14,6 +14,17 @@ jobs:
     steps:
       - name: checkout prebuilt code
         uses: actions/checkout@v3
+      - name: create env file
+        run: |
+          touch docker.env
+          echo PORT=${{ env.PORT }} >> docker.env
+          echo DATABASE_URL=${{ env.DATABASE_URL }} >> docker.env
+          echo ACCESS_SECRET=${{ env.ACCESS_SECRET }} >> docker.env
+          echo REFRESH_SECRET=${{ env.REFRESH_SECRET }} >> docker.env
+          echo VITE_API_ENDPOINT=${{ env.VITE_API_ENDPOINT }} >> docker.env
+          echo MAILER_HOST=${{ env.MAILER_HOST }} >> docker.env
+          echo MAILER_USER=${{ env.MAILER_USER }} >> docker.env
+          echo MAILER_PASSWORD=${{ env.MAILER_PASSWORD }} >> docker.env
       - name: deploy
         run: |
           sudo docker compose down
