--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-  pull_request: 
-    branches: 
+  pull_request:
+    branches:
       - main
 
 jobs:
@@ -46,3 +46,26 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           branch: preview
+
+  deploy:
+    runs-on: self-hosted
+    steps:
+      - name: checkout prebuilt code
+        uses: actions/checkout@v3
+        with:
+          ref: preview
+      - name: create env file
+        run: |
+          touch docker.env
+          echo PORT=${{ env.PORT }} >> docker.env
+          echo DATABASE_URL=${{ env.DATABASE_URL }} >> docker.env
+          echo ACCESS_SECRET=${{ env.ACCESS_SECRET }} >> docker.env
+          echo REFRESH_SECRET=${{ env.REFRESH_SECRET }} >> docker.env
+          echo VITE_API_ENDPOINT=${{ env.VITE_API_ENDPOINT }} >> docker.env
+          echo MAILER_HOST=${{ env.MAILER_HOST }} >> docker.env
+          echo MAILER_USER=${{ env.MAILER_USER }} >> docker.env
+          echo MAILER_PASSWORD=${{ env.MAILER_PASSWORD }} >> docker.env
+      - name: deploy
+        run: |
+          sudo docker compose down
+          sudo docker compose up -d
