updated gh workflows

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -48,6 +48,7 @@ jobs:
           branch: preview
 
   deploy:
+    needs: build
     runs-on: self-hosted
     steps:
       - name: checkout prebuilt code
