--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -45,39 +45,27 @@ jobs:
           echo MAILER_HOST=${{ env.MAILER_HOST }} >> docker.env
           echo MAILER_USER=${{ env.MAILER_USER }} >> docker.env
           echo MAILER_PASSWORD=${{ env.MAILER_PASSWORD }} >> docker.env
-      - name: login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: build and push Docker image
-        uses: docker/bake-action@v4
-        with:
-          push: true
-      - name: create docker-compose file artifact
+      - name: create build artifact
         uses: actions/upload-artifact@v3
         with:
-          name: docker-compose.yaml
-          path: docker-compose.yaml
+          name: app
+          path: .
 
   deploy:
     needs: build
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
-      - name: copy docker-compose file
+      - name: download build artifact
         uses: actions/download-artifact@v3
         with:
-          name: docker-compose.yaml
-      - name: login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: run Docker image
-        run: |
-          export POSTGRES_USER=${{ secrets.POSTGRES_USER }}
-          export POSTGRES_DB=${{ secrets.POSTGRES_DB }}
-          export POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
-          sudo docker compose down
-          sudo docker compose pull
-          sudo docker compose up -d
+          name: app
+      - name: show artifact content
+        run: ls
+      # - name: run Docker image
+      #   run: |
+      #     export POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+      #     export POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+      #     export POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+      #     sudo docker compose down
+      #     sudo docker compose pull
+      #     sudo docker compose up -d
