updated gh workflow

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -26,6 +26,7 @@ jobs:
           mkdir backend/client
           mv frontend/dist/* backend/client
           rm -rf frontend
+          cd backend
           mv backend app
           rm -r test/ .gitignore README.md
       - name: build backend
