--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -66,7 +66,7 @@ jobs:
         run: |
           tar -xf build.tar.gz
           rm build.tar.gz
-          ll app
+          ls -lha app
 
       # - name: run Docker image
       #   run: |
