--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
     image: postgres:latest
     restart: unless-stopped
     container_name: postgres
+    env_file:
+      - docker.env
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
