--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -77,4 +77,5 @@ jobs:
       - name: run Docker image
         run: |
           sudo docker compose down
+          sudo docker compose build
           sudo docker compose up -d
