--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,8 +38,10 @@ jobs:
         run: |
           cd app
           touch docker.env
+          echo "here is docker.env"
+          cat docker.env
           echo PORT=${{ vars.PORT }} >> docker.env
-          echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> docker.env
+          echo DATABASE_URL=${{ vars.DATABASE_URL }} >> docker.env
           echo ACCESS_SECRET=${{ vars.ACCESS_SECRET }} >> docker.env
           echo REFRESH_SECRET=${{ vars.REFRESH_SECRET }} >> docker.env
           echo VITE_API_ENDPOINT=${{ vars.VITE_API_ENDPOINT }} >> docker.env
