--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,23 +34,6 @@ jobs:
           cd app
           yarn install
           yarn build
-      - name: create env file
-        run: |
-          cd app
-          touch docker.env
-          echo "here is docker.env"
-          cat docker.env
-          echo PORT=${{ vars.PORT }} >> docker.env
-          echo DATABASE_URL=${{ vars.DATABASE_URL }} >> docker.env
-          echo ACCESS_SECRET=${{ vars.ACCESS_SECRET }} >> docker.env
-          echo REFRESH_SECRET=${{ vars.REFRESH_SECRET }} >> docker.env
-          echo VITE_API_ENDPOINT=${{ vars.VITE_API_ENDPOINT }} >> docker.env
-          echo MAILER_HOST=${{ vars.MAILER_HOST }} >> docker.env
-          echo MAILER_USER=${{ vars.MAILER_USER }} >> docker.env
-          echo MAILER_PASSWORD=${{ vars.MAILER_PASSWORD }} >> docker.env
-          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> docker.env
-          echo POSTGRES_DB=${{ secrets.POSTGRES_DB }} >> docker.env
-          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> docker.env
       - name: create build artifact
         run: tar -czvf build.tar.gz app
       - name: upload build artifact
@@ -76,6 +59,19 @@ jobs:
           tar -xf build.tar.gz
           mv app/* .
           rm -r app build.tar.gz
+      - name: create env file
+        run: |
+          echo PORT=${{ vars.PORT }} >> docker.env
+          echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> docker.env
+          echo ACCESS_SECRET=${{ vars.ACCESS_SECRET }} >> docker.env
+          echo REFRESH_SECRET=${{ vars.REFRESH_SECRET }} >> docker.env
+          echo VITE_API_ENDPOINT=${{ vars.VITE_API_ENDPOINT }} >> docker.env
+          echo MAILER_HOST=${{ vars.MAILER_HOST }} >> docker.env
+          echo MAILER_USER=${{ vars.MAILER_USER }} >> docker.env
+          echo MAILER_PASSWORD=${{ vars.MAILER_PASSWORD }} >> docker.env
+          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> docker.env
+          echo POSTGRES_DB=${{ secrets.POSTGRES_DB }} >> docker.env
+          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> docker.env
       - name: run Docker image
         run: |
           sudo docker compose down
