--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -61,17 +61,17 @@ jobs:
           rm -r app build.tar.gz
       - name: create env file
         run: |
-          echo PORT=${{ vars.PORT }} >> docker.env
-          echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> docker.env
-          echo ACCESS_SECRET=${{ vars.ACCESS_SECRET }} >> docker.env
-          echo REFRESH_SECRET=${{ vars.REFRESH_SECRET }} >> docker.env
-          echo VITE_API_ENDPOINT=${{ vars.VITE_API_ENDPOINT }} >> docker.env
-          echo MAILER_HOST=${{ vars.MAILER_HOST }} >> docker.env
-          echo MAILER_USER=${{ vars.MAILER_USER }} >> docker.env
-          echo MAILER_PASSWORD=${{ vars.MAILER_PASSWORD }} >> docker.env
-          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> docker.env
-          echo POSTGRES_DB=${{ secrets.POSTGRES_DB }} >> docker.env
-          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> docker.env
+          echo "PORT=${{ vars.PORT }}" >> docker.env
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> docker.env
+          echo "ACCESS_SECRET=${{ vars.ACCESS_SECRET }}" >> docker.env
+          echo "REFRESH_SECRET=${{ vars.REFRESH_SECRET }}" >> docker.env
+          echo "VITE_API_ENDPOINT=${{ vars.VITE_API_ENDPOINT }}" >> docker.env
+          echo "MAILER_HOST=${{ vars.MAILER_HOST }}" >> docker.env
+          echo "MAILER_USER=${{ vars.MAILER_USER }}" >> docker.env
+          echo "MAILER_PASSWORD=${{ vars.MAILER_PASSWORD }}" >> docker.env
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> docker.env
+          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> docker.env
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> docker.env
       - name: run Docker image
         run: |
           sudo docker compose down
