--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04 # perform all builds on GitHub VMs
     container: node:20
     steps:
       - uses: actions/checkout@v3
@@ -61,19 +61,22 @@ jobs:
           rm -r app build.tar.gz
       - name: create env file
         run: |
-          echo "PORT=${{ vars.PORT }}" >> docker.env
-          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> docker.env
-          echo "ACCESS_SECRET=${{ vars.ACCESS_SECRET }}" >> docker.env
-          echo "REFRESH_SECRET=${{ vars.REFRESH_SECRET }}" >> docker.env
-          echo "VITE_API_ENDPOINT=${{ vars.VITE_API_ENDPOINT }}" >> docker.env
-          echo "MAILER_HOST=${{ vars.MAILER_HOST }}" >> docker.env
-          echo "MAILER_USER=${{ vars.MAILER_USER }}" >> docker.env
-          echo "MAILER_PASSWORD=${{ vars.MAILER_PASSWORD }}" >> docker.env
-          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> docker.env
-          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> docker.env
-          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> docker.env
-      - name: run Docker image
+          echo "PORT=${{ vars.PORT }}" >> .env
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+          echo "ACCESS_SECRET=${{ vars.ACCESS_SECRET }}" >> .env
+          echo "REFRESH_SECRET=${{ vars.REFRESH_SECRET }}" >> .env
+          echo "VITE_API_ENDPOINT=${{ vars.VITE_API_ENDPOINT }}" >> .env
+          echo "MAILER_HOST=${{ vars.MAILER_HOST }}" >> .env
+          echo "MAILER_USER=${{ vars.MAILER_USER }}" >> .env
+          echo "MAILER_PASSWORD=${{ vars.MAILER_PASSWORD }}" >> .env
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
+          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+      - name: kill running application
+        continue-on-error: true
+        run: sudo pm2 stop ${{ vars.APP_NAME }}
+      - name: migrate and populate database
+        run: yarn migrate_db
+      - name: run application 
         run: |
-          sudo docker compose down
-          sudo docker compose build
-          sudo docker compose up -d
+          sudo pm2 start
