--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -72,6 +72,10 @@ jobs:
           echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
           echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
           echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+      - name: install temporary runtimes
+        run: |
+          npm i -g yarn
+          npm i -g pm2
       - name: kill running application
         continue-on-error: true
         run: pm2 stop ${{ vars.APP_NAME }}
@@ -80,3 +84,7 @@ jobs:
       - name: run application 
         run: |
           pm2 start
+      - name: uninstall temporary runtimes
+        run: |
+          npm uninstall -g yarn
+          npm uninstall -g pm2
