--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04 # perform all builds on GitHub VMs
+    runs-on: ubuntu-22.04
     container: node:20
     steps:
       - uses: actions/checkout@v3
@@ -34,6 +34,23 @@ jobs:
           cd app
           yarn install
           yarn build
+      - name: create env file
+        run: |
+          echo "PORT=${{ vars.PORT }}" >> docker.env
+          echo "DATABASE_URL=postgres://${{ secrets.POSTGRES_USER }}:${{ secrets.POSTGRES_PASSWORD }}@${{ vars.HOST }}:5432/${{ secrets.POSTGRES_DB }}?schema=public&pool_timeout=0" >> docker.env
+          echo "ACCESS_SECRET=${{ vars.ACCESS_SECRET }}" >> docker.env
+          echo "REFRESH_SECRET=${{ vars.REFRESH_SECRET }}" >> docker.env
+          echo "VITE_API_ENDPOINT=http://${{ vars.HOST }}/api" >> docker.env
+          echo "MAILER_HOST=${{ vars.MAILER_HOST }}" >> docker.env
+          echo "MAILER_USER=${{ vars.MAILER_USER }}" >> docker.env
+          echo "MAILER_PASSWORD=${{ vars.MAILER_PASSWORD }}" >> docker.env
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> docker.env
+          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> docker.env
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> docker.env
+      - name: run database migrations
+        run: |
+          cp docker.env .env
+          yarn migrate_db
       - name: create build artifact
         run: tar -czvf build.tar.gz app
       - name: upload build artifact
@@ -59,24 +76,8 @@ jobs:
           tar -xf build.tar.gz
           mv app/* .
           rm -r app build.tar.gz
-      - name: create env file
+      - name: run Docker image
         run: |
-          echo "PORT=${{ vars.PORT }}" >> .env
-          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
-          echo "ACCESS_SECRET=${{ vars.ACCESS_SECRET }}" >> .env
-          echo "REFRESH_SECRET=${{ vars.REFRESH_SECRET }}" >> .env
-          echo "VITE_API_ENDPOINT=${{ vars.VITE_API_ENDPOINT }}" >> .env
-          echo "MAILER_HOST=${{ vars.MAILER_HOST }}" >> .env
-          echo "MAILER_USER=${{ vars.MAILER_USER }}" >> .env
-          echo "MAILER_PASSWORD=${{ vars.MAILER_PASSWORD }}" >> .env
-          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
-          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
-          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
-      - name: kill running application
-        continue-on-error: true
-        run: pm2 stop ${{ vars.APP_NAME }}
-      - name: migrate and populate database
-        run: yarn migrate_db
-      - name: run application
-        run: |
-          pm2 start
+          sudo docker compose down
+          sudo docker compose build
+          sudo docker compose up -d
