fix gh workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -48,11 +48,6 @@ jobs:
           echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> docker.env
           echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> docker.env
           echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> docker.env
-      - name: run database migrations
-        run: |
-          cd app
-          cp docker.env .env
-          yarn migrate_db
       - name: create build artifact
         run: tar -czvf build.tar.gz app
       - name: upload build artifact
@@ -83,3 +78,23 @@ jobs:
           sudo docker compose down
           sudo docker compose build
           sudo docker compose up -d
+  
+  migrate-database:
+    needs: deploy
+    runs-on: ubuntu-latest
+    container: node:20
+    steps:
+      - name: download build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: app
+      - name: extract build from artifact
+        run: |
+          tar -xf build.tar.gz
+          mv app/* .
+          rm -r app build.tar.gz
+      - name: run migrations
+        run: |
+          cd docker.env .env
+          yarn migrate_db
+
