fix docker for puppeteer

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,6 +16,8 @@ RUN apt-get update && apt-get install gnupg wget -y && \
 
 RUN apt-get update -y && apt-get install -y openssl
 
+RUN npx @puppeteer/browsers install chrome
+
 COPY . .
 
 ADD docker.env .env
