--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -75,6 +75,7 @@ jobs:
       - name: run Docker image
         run: |
           sudo docker compose down
+          sudo docker image prune -f
           sudo docker compose build
           sudo docker compose up -d
   
