updated migration method for migrate-database job

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -96,6 +96,5 @@ jobs:
       - name: run migrations
         run: |
           cp docker.env .env
-          yarn primsa migrate dev
-          yarn db seed
+          yarn migrate_db
 
