separate database migration step in two

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -98,4 +98,6 @@ jobs:
         run: |
           cp docker.env .env
           yarn migrate_db
+      - name: populate database
+        run: yarn seed_db
 
