--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,14 +1,21 @@
-version: "3"
+version: '3'
 services:
+  rust-api:
+    restart: always
+    build:
+      dockerfile: ./rust-service/Dockerfile
+    ports:
+      - '81:3000'
   server:
     restart: always
     build:
       context: .
     ports:
-      - "80:3000"
+      - '80:3000'
     depends_on:
+      rust-api:
       postgres:
-        condition: service_healthy
+          condition: service_healthy
   postgres:
     image: postgres:latest
     restart: unless-stopped
@@ -16,11 +23,11 @@ services:
     env_file:
       - docker.env
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - postgres:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 10s
       timeout: 5s
       retries: 5
