--- a/backend/rust-service/Dockerfile
+++ b/backend/rust-service/Dockerfile
@@ -9,6 +9,8 @@ ADD docker.env .env
 # Allow build without a database connection
 ENV SQLX_OFFLINE=true
 
+RUN ls -lha .
+
 RUN cargo build --release
 
 EXPOSE 3000
