--- a/backend/rust-service/Dockerfile
+++ b/backend/rust-service/Dockerfile
@@ -2,12 +2,18 @@ FROM rust:latest
 
 WORKDIR /rust-api
 
+# Allow build without a database connection
+ENV SQLX_OFFLINE=true
+
+RUN cargo install sqlx-cli
+
 COPY . .
 
 ADD docker.env .env
 
-# Allow build without a database connection
-ENV SQLX_OFFLINE=true
+RUN cargo clean
+
+RUN cargo sqlx prepare
 
 RUN ls -lha .
 
