--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,9 +8,6 @@ on:
     branches:
       - main
 
-env:
-  SQLX_OFFLINE: true
-
 jobs:
   build-rust-api:
     runs-on: ubuntu-22.04
@@ -28,9 +25,9 @@ jobs:
           cd backend/rust-service
           cargo install sqlx-cli
           cargo clean
-          cargo sqlx prepare
+          SQLX_OFFLINE=true cargo sqlx prepare
       - name: build binary
-        run: cargo build --release
+        run: SQLX_OFFLINE=true cargo build --release
       - name: upload build artifact
         uses: actions/upload-artifact@v3
         with:
