--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -6,6 +6,9 @@ services:
       dockerfile: ./rust-service/Dockerfile
     ports:
       - '81:3000'
+    depends_on:
+      postgres:
+        condition: service_healthy
   server:
     restart: always
     build:
@@ -16,7 +19,7 @@ services:
       rust-api:
         condition: service_started
       postgres:
-          condition: service_healthy
+        condition: service_healthy
   postgres:
     image: postgres:latest
     restart: unless-stopped
