--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,14 +20,15 @@ jobs:
           echo "PORT=${{ vars.PORT }}" >> docker.env
           echo "DATABASE_URL=postgresql://${{ secrets.POSTGRES_USER }}:${{ secrets.POSTGRES_PASSWORD }}@${{ vars.HOST }}:5432/${{ secrets.POSTGRES_DB }}?schema=public&pool_timeout=0" >> docker.env
           cp docker.env .env
+          echo "SQLX_OFFLINE=true" >> .env
       - name: install SQLX
         run: |
           cd backend/rust-service
           cargo install sqlx-cli
           cargo clean
-          SQLX_OFFLINE=true cargo sqlx prepare
+          cargo sqlx prepare
       - name: build binary
-        run: SQLX_OFFLINE=true cargo build --release
+        run: cargo build --release
       - name: upload build artifact
         uses: actions/upload-artifact@v3
         with:
