--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -64,6 +64,12 @@ jobs:
           echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> docker.env
           echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> docker.env
           echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> docker.env
+      - name: download rust build
+        uses: actions/download-artifact@v3
+        with:
+          name: rust-api
+      - name: move rust-api binary
+        run: mv rust-api app/rust-service/server
       - name: create build artifact
         run: tar -czvf build.tar.gz app
       - name: upload build artifact
@@ -89,16 +95,8 @@ jobs:
           tar -xf build.tar.gz
           mv app/* .
           rm -r app build.tar.gz
-      - name: download rust build
-        uses: actions/download-artifact@v3
-        with:
-          name: rust-api
-      - name: move rust-api binary
-        run: mv rust-api rust-service/server
       - name: run Docker image
         run: |
-          ls -lha .
-          ls -lha rust-service
           sudo docker compose down
           sudo docker image prune -f
           sudo docker compose build
