fix rust-api dockerfile

--- a/backend/rust-service/Dockerfile
+++ b/backend/rust-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.14
+FROM ubuntu:22.04
 
 WORKDIR /server
 
@@ -9,4 +9,4 @@ ADD docker.env .env
 
 EXPOSE 3000
 
-ENTRYPOINT [ "server" ]
+ENTRYPOINT [ "./server" ]
