--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
           name: docker-compose
           path: |
             docker.env
-            docker-compose.yml
+            docker-compose.yaml
 
       - name: set up QEMU
         uses: docker/setup-qemu-action@v3
