--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     restart: always
     build:
       context: ./backend/rust-service
+      dockerfile: Dockerfile
     ports:
       - '8080:8080'
     depends_on:
