--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,7 @@ jobs:
           echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> docker.env
           echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> docker.env
           echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> docker.env
+          echo "VITE_API_ENDPOINT=http://${{ vars.HOST }}/api" >> docker.env
 
       - name: upload artifact
         uses: actions/upload-artifact@v3
@@ -51,13 +52,9 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/sage-pharmacy:latest
-            ${{ secrets.DOCKER_USERNAME }}/rust-service-sage-pharmacy:latest
+        run: |
+          docker-compose build
+          docker-compose push
 
   publish:
     needs: build
